[package]
name = "amid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["tracing"] }
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
# tower-grpc = "0.1.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "registry",
    "fmt",
    "env-filter",
] }

[build-dependencies]
tonic-build = "0.11.0"


[build]
rustc-env = { "CARGO_TARGET_PROTO_DIR" = "proto" }
